# RusTTY

./: .deny.toml  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson.options
i18n/en/: rustty.ftl
rustty/: Cargo.toml  meson.build
rustty/src/: buffers.rs  config.rs  dashboard.rs  i18n.rs  main.rs
