[package]
name = "rustty"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tui = "0.19"
crossterm = "0.25"
i18n-embed.workspace = true
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
